Added start / stop controls, refactor game time UI and intervals, refactored Cell neighbor detection and fate determiniation

--- a/index.html
+++ b/index.html
@@ -3,5 +3,12 @@
     <script type="module" src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="app.css">
   </head>
-  <body></body>
+  <body>
+    <div id="nav">
+      <p>Current Generation: <span id="currentGeneration"></span></p>
+      <button id="start">start</button>
+      <button id="stop">stop</button>
+    </div>
+    
+  </body>
 </html>
