Added next method to GameTime, add next control, refactored Cell  determineFate

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   </head>
   <body>
     <div id="nav">
-      <p>Current Generation: <span id="currentGeneration"></span></p>
+      <p>Current Generation: <span id="currentGeneration">0</span></p>
+      <button id="next">next</button>
       <button id="start">start</button>
       <button id="stop">stop</button>
     </div>
