Finalized determineFate method, refactored grid rendering, added comments, updated controls, added clear button

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <body>
     <div id="nav">
       <p>Current Generation: <span id="currentGeneration">0</span></p>
-      <button id="next">next</button>
-      <button id="start">start</button>
-      <button id="stop">stop</button>
+      <button id="next">Next Generation</button>
+      <button id="start">Start Auto Generation</button>
+      <button id="stop">Stop Auto Generation</button>
+      <button id="clear">Clear Grid</button>
     </div>
-    
   </body>
 </html>
